--- a/src/OnlineMarket.DataAccess/OnlineMarket.DataAccess.csproj
+++ b/src/OnlineMarket.DataAccess/OnlineMarket.DataAccess.csproj
@@ -6,4 +6,16 @@
     <Nullable>enable</Nullable>
   </PropertyGroup>
 
+  <ItemGroup>
+    <Folder Include="DbContexts\" />
+    <Folder Include="Interfaces\" />
+    <Folder Include="Configurations\" />
+    <Folder Include="SeedData\" />
+    <Folder Include="Repositories\" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\OnlineMarket.Domain\OnlineMarket.Domain.csproj" />
+  </ItemGroup>
+
 </Project>
