--- a/src/OnlineMarket.Domain/OnlineMarket.Domain.csproj
+++ b/src/OnlineMarket.Domain/OnlineMarket.Domain.csproj
@@ -6,4 +6,12 @@
     <Nullable>enable</Nullable>
   </PropertyGroup>
 
+  <ItemGroup>
+    <Folder Include="Enums\" />
+    <Folder Include="Exceptions\" />
+    <Folder Include="Entities\" />
+    <Folder Include="Common\" />
+    <Folder Include="Constants\" />
+  </ItemGroup>
+
 </Project>
