--- a/test/OnlineMarket.IntegrationTest/OnlineMarket.IntegrationTest.csproj
+++ b/test/OnlineMarket.IntegrationTest/OnlineMarket.IntegrationTest.csproj
@@ -21,4 +21,8 @@
     </PackageReference>
   </ItemGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\OnlineMarket.UnitTest\OnlineMarket.UnitTest.csproj" />
+  </ItemGroup>
+
 </Project>
