--- a/test/OnlineMarket.UnitTest/OnlineMarket.UnitTest.csproj
+++ b/test/OnlineMarket.UnitTest/OnlineMarket.UnitTest.csproj
@@ -21,4 +21,13 @@
     </PackageReference>
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="Helpers\" />
+    <Folder Include="Validations\" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\..\src\OnlineMarket.Service\OnlineMarket.Service.csproj" />
+  </ItemGroup>
+
 </Project>
