Implimented Email Service

--- a/src/OnlineMarket.Api/appsettings.json
+++ b/src/OnlineMarket.Api/appsettings.json
@@ -5,5 +5,11 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
+  "EmailSettings": {
+    "Host": "smtp.gmail.com",
+    "Port": 587,
+    "Email": "otkirbeksobirjonov309@gmail.com",
+    "Password": "gqhrgehhvykiwfda"
+  },
   "AllowedHosts": "*"
 }
