--- a/src/OnlineMarket.Service/OnlineMarket.Service.csproj
+++ b/src/OnlineMarket.Service/OnlineMarket.Service.csproj
@@ -13,10 +13,12 @@
     <Folder Include="Common\Validations\" />
     <Folder Include="Common\Security\" />
     <Folder Include="Common\Utils\" />
-    <Folder Include="Dtos\" />
-    <Folder Include="Interfaces\" />
     <Folder Include="ViewModels\" />
-    <Folder Include="Services\" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <PackageReference Include="MailKit" Version="3.4.3" />
+    <PackageReference Include="MimeKit" Version="3.4.3" />
   </ItemGroup>
 
   <ItemGroup>
