--- a/src/OnlineMarket.Api/appsettings.json
+++ b/src/OnlineMarket.Api/appsettings.json
@@ -5,6 +5,9 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
+  "ConnectionStrings": {
+    "DatabaseConnection": "Host=localhost; Port=5432; Database=online-shop-db; User Id = postgres; Password=785214;"
+  },
   "EmailSettings": {
     "Host": "smtp.gmail.com",
     "Port": 587,
