--- a/src/OnlineMarket.DataAccess/OnlineMarket.DataAccess.csproj
+++ b/src/OnlineMarket.DataAccess/OnlineMarket.DataAccess.csproj
@@ -9,9 +9,16 @@
   <ItemGroup>
     <Folder Include="DbContexts\" />
     <Folder Include="Interfaces\" />
-    <Folder Include="Configurations\" />
     <Folder Include="SeedData\" />
     <Folder Include="Repositories\" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <PackageReference Include="Microsoft.EntityFrameworkCore.Tools" Version="6.0.12">
+      <PrivateAssets>all</PrivateAssets>
+      <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
+    </PackageReference>
+    <PackageReference Include="Npgsql.EntityFrameworkCore.PostgreSQL" Version="6.0.8" />
   </ItemGroup>
 
   <ItemGroup>
