--- a/src/OnlineMarket.Service/OnlineMarket.Service.csproj
+++ b/src/OnlineMarket.Service/OnlineMarket.Service.csproj
@@ -18,6 +18,7 @@
 
   <ItemGroup>
     <PackageReference Include="MailKit" Version="3.4.3" />
+    <PackageReference Include="Microsoft.Extensions.Configuration.Abstractions" Version="7.0.0" />
     <PackageReference Include="MimeKit" Version="3.4.3" />
   </ItemGroup>
 
