--- a/src/OnlineMarket.Domain/OnlineMarket.Domain.csproj
+++ b/src/OnlineMarket.Domain/OnlineMarket.Domain.csproj
@@ -7,8 +7,12 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <Folder Include="Exceptions\" />
-    <Folder Include="Constants\" />
+    <Compile Remove="Constants\**" />
+    <Compile Remove="Exceptions\**" />
+    <EmbeddedResource Remove="Constants\**" />
+    <EmbeddedResource Remove="Exceptions\**" />
+    <None Remove="Constants\**" />
+    <None Remove="Exceptions\**" />
   </ItemGroup>
 
 </Project>
